--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.servlet.multipart.max-request-size=10MB
 project.image=images/
 
 logging.level.org.springframework.security=DEBUG
-
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
